# desktop-analytics

./: CMakeLists.txt
DesktopAnalyticsFeatureDemo/: CMakeLists.txt
DesktopAnalyticsFeatureDemo/CMakeModules/: FindCPPDOM.cmake  FindCppDOM-sm.cmake  FindCppDOMHelper.cmake  FindFreeglutHelper.cmake  FindPOCO.cmake  FindVrjHelper.cmake  ModuleInstall.cmake  jag3dBuildTreeSettings.cmake.in  jag3dConfig.cmake.in  jag3dUsejag3d.cmake.in
DesktopAnalyticsFeatureDemo/data/: jagmodel.frag  jagmodel.vert
DesktopAnalyticsFeatureDemo/src/: ABufferCollectionVisitor.cpp  ABufferCollectionVisitor.h  CMakeLists.txt  DemoInterface.h  HighlightNodeByNamesVisitor.cpp  HighlightNodeByNamesVisitor.h  NaturalSortQTreeWidgetItem.cxx  NaturalSortQTreeWidgetItem.h  QueryResults.cxx  QueryResults.h  RemoveNodeNameVisitor.cpp  RemoveNodeNameVisitor.h  SimpleDataTypeSignalSignatures.h  ToggleByNameVisitor.cpp  ToggleByNameVisitor.h  ToggleByNamesVisitor.cpp  ToggleByNamesVisitor.h  WarrantyToolGP.cxx  WarrantyToolGP.h  WarrantyToolPlugin_UIDialog.cxx  WarrantyToolPlugin_UIDialog.h  benchmark.cpp  datest.ui  jagmodel.cpp  jagmodel.h  qtSupport.cpp
DesktopAnalyticsTestSuite/: CMakeLists.txt
DesktopAnalyticsTestSuite/CMakeModules/: CMakeMacros.cmake  FindFreeglut.cmake  FindGL3.cmake  FindVrj.cmake  jag3dConfigVersion.cmake.in
DesktopAnalyticsTestSuite/perftests/: CMakeLists.txt  maptest.cpp
DesktopAnalyticsTestSuite/src/: CMakeLists.txt  DemoInterface.h  datest.ui  jagmodel.cpp  jagmodel.h  qtGlWidget.h  qtSupport.cpp
src/: CMakeLists.txt
src/inno/: jttoive.iss
src/translator/: CMakeLists.txt  RemoveNodeNameVisitor.cxx  RemoveNodeNameVisitor.h  main.cxx  ptconfigfile.txt
